salesforce/force-app/main/default/objects/Sachet_Detail__c/Sachet_Detail__c.object-meta.xml
<CustomObject>
    <description>Sachet packaging costs and specifications</description>
    <label>Sachet Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sachet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>