salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Cost_Content__c.field-meta.xml
<CustomField>
    <fullName>Cost_Content__c</fullName><label>Cost Per Content</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>