salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Display_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Display_Dimension__c</fullName><label>Display Dimension</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>