salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Display_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Display_Quantity__c</fullName><label>Display Quantity</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>