salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName><label>Material</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>