salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Other_Cost_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Bulk__c</fullName><label>Other Cost (Bulk)</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>