salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Printing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Printing_Cost__c</fullName><label>Printing Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>