salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName><label>Quantity</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>