salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Shipper_Case_Count_Desc__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Case_Count_Desc__c</fullName><label>Shipper Case Count Desc</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>