salesforce/force-app/main/default/objects/Sachet_Detail__c/fields/Shrink_Wrap__c.field-meta.xml
<CustomField>
    <fullName>Shrink_Wrap__c</fullName><label>Shrink Wrap</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>